--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
 </script>
 	<script id="template-author-cloud-link" type="text/x-handlebars-template">
   {{#each authors}}
-  <li><a class="{{ className }}" href="#authorName-{{ author }}">{{ author }}</a> ({{ count }})</li>
+  <li><a class="{{ className }}" href="#authorName-{{ author }}">{{ author }}({{ count }})</a> </li>
   {{/each}}
 </script>
 
